update letters and status

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 		<h1>LUCY ENGLISH WORDLE</h1>
 		<section class="game">
 			<div id="guess1" class="guess" data-letters="">
-				<div class="guess__tile"></div>
-				<div class="guess__tile"></div>
-				<div class="guess__tile"></div>
-				<div class="guess__tile"></div>
-				<div class="guess__tile"></div>
+				<div id="guessTile1" class="guess__tile"></div>
+				<div id="guessTile2"class="guess__tile"></div>
+				<div id="guessTile3" class="guess__tile"></div>
+				<div id="guessTile4"class="guess__tile"></div>
+				<div id="guessTile5" class="guess__tile"></div>
 			</div>
 		</section>
 
