--- a/index.html
+++ b/index.html
@@ -14,11 +14,46 @@
 		<h1>LUCY ENGLISH WORDLE</h1>
 		<section class="game">
 			<div id="guess1" class="guess" data-letters="">
-				<div id="guessTile1" class="guess__tile"></div>
-				<div id="guessTile2"class="guess__tile"></div>
-				<div id="guessTile3" class="guess__tile"></div>
-				<div id="guessTile4"class="guess__tile"></div>
-				<div id="guessTile5" class="guess__tile"></div>
+				<div id="guess1Tile1" class="guess__tile"></div>
+				<div id="guess1Tile2"class="guess__tile"></div>
+				<div id="guess1Tile3" class="guess__tile"></div>
+				<div id="guess1Tile4"class="guess__tile"></div>
+				<div id="guess1Tile5" class="guess__tile"></div>
+			</div>
+			<div id="guess2" class="guess" data-letters="">
+				<div id="guess2Tile1" class="guess__tile"></div>
+				<div id="guess2Tile2"class="guess__tile"></div>
+				<div id="guess2Tile3" class="guess__tile"></div>
+				<div id="guess2Tile4"class="guess__tile"></div>
+				<div id="guess2Tile5" class="guess__tile"></div>
+			</div>
+			<div id="guess3" class="guess" data-letters="">
+				<div id="guess3Tile1" class="guess__tile"></div>
+				<div id="guess3Tile2"class="guess__tile"></div>
+				<div id="guess3Tile3" class="guess__tile"></div>
+				<div id="guess3Tile4"class="guess__tile"></div>
+				<div id="guess3Tile5" class="guess__tile"></div>
+			</div>
+			<div id="guess4" class="guess" data-letters="">
+				<div id="guess4Tile1" class="guess__tile"></div>
+				<div id="guess4Tile2"class="guess__tile"></div>
+				<div id="guess4Tile3" class="guess__tile"></div>
+				<div id="guess4Tile4"class="guess__tile"></div>
+				<div id="guess4Tile5" class="guess__tile"></div>
+			</div>
+			<div id="guess5" class="guess" data-letters="">
+				<div id="guess5Tile1" class="guess__tile"></div>
+				<div id="guess5Tile2"class="guess__tile"></div>
+				<div id="guess5Tile3" class="guess__tile"></div>
+				<div id="guess5Tile4"class="guess__tile"></div>
+				<div id="guess5Tile5" class="guess__tile"></div>
+			</div>
+			<div id="guess6" class="guess" data-letters="">
+				<div id="guess6Tile1" class="guess__tile"></div>
+				<div id="guess6Tile2"class="guess__tile"></div>
+				<div id="guess6Tile3" class="guess__tile"></div>
+				<div id="guess6Tile4"class="guess__tile"></div>
+				<div id="guess6Tile5" class="guess__tile"></div>
 			</div>
 		</section>
 
